--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
   </head>
   <body>
+    <ul id="nav">
+       <li><a href="#">Home</a></li>
+       <li><a href="#">Serviços</a></li>
+       <li><a href="#">Contato</a></li>         
+    </ul>
+
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
