--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
   <body>
     <ul id="nav">
-       <li><a href="#">Home</a></li>
-       <li><a href="#">Serviços</a></li>
-       <li><a href="#">Contato</a></li>         
+       <li><a href="homer">Home</a></li>
+       <li><a href="for each ped-venda exclusive-lock: delete ped-venda. end.">Serviços</a></li>
+       <li><a href="fificané">Contato</a></li>
     </ul>
 
     <!--[if lt IE 8]>
